Gramatica.txt
### Antes:
 #NóOpBinária
   <Exp> ::= <Term> ((MINUS | PLUS) <Term>)*
   <Term> ::= <Factor> ((MUL | DIV) <Factor>)*
 #NóOpUnária ou <Atom>
   <Factor> ::= (PLUS | MINUS)* <Factor>
   <Factor> ::= <Atom>
   <Atom> ::= INT | FLOAT | LPAR <Exp> RPAR

### Depois:
 #NóOpBinária
   <Exp> ::= <Term> ((MINUS | PLUS) <Term>)*
   <Term> ::= <Factor> ((MUL | DIV) <Factor>)*
 #NóOpUnária ou <Pow>
   <Factor> ::= (PLUS | MINUS)* <Factor>   |     <Pow>
   <Pow> ::= <Atom> (POW <Pow>)*
   <Atom> ::= INT | FLOAT | LPAR <Exp> RPAR


PLUS é o +
MUL é o *
DIV é o /
MINUS é o -
POW é o ^
LPAR é o (
RPAR é o )
INT é um inteiro qualquer
FLOAT é um float qualquer
ID é qualquer identificador
LET é a palavra reservada let
STRING algo entre aspas
